--- a/src/ui/components/drone/alert.css
+++ b/src/ui/components/drone/alert.css
@@ -14,6 +14,18 @@ body {
   position: relative;
 }
 
+.user-avatar {
+    width: 36px;
+    height: 36px;
+    background-color: rgba(5, 217, 232, 0.1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #05d9e8;
+    font-weight: bold;
+    border: 1px solid #05d9e8;
+}
 body::before {
   content: '';
   position: absolute;
